#!/usr/bin/env python3
"""
auth-service æµ‹è¯•è„šæœ¬
æµ‹è¯• HTTP ç«¯ç‚¹å’Œ Token ç”Ÿæˆ
"""
import requests
import json
import sys

def test_health():
    """æµ‹è¯•å¥åº·æ£€æŸ¥ç«¯ç‚¹"""
    print("=" * 60)
    print("æµ‹è¯•1: å¥åº·æ£€æŸ¥")
    print("=" * 60)
    try:
        response = requests.get("http://localhost:8013/test/health", timeout=5)
        print(f"çŠ¶æ€ç : {response.status_code}")
        print(f"å“åº”: {json.dumps(response.json(), indent=2, ensure_ascii=False)}")
        return True
    except Exception as e:
        print(f"âŒ é”™è¯¯: {e}")
        return False

def generate_test_token(user_id="user123", username="zhangsan", email="zhangsan@example.com"):
    """ç”Ÿæˆæµ‹è¯• Token"""
    print("\n" + "=" * 60)
    print("æµ‹è¯•2: ç”Ÿæˆæµ‹è¯• Token")
    print("=" * 60)
    try:
        url = f"http://localhost:8013/test/generate-token?userId={user_id}&username={username}&email={email}"
        print(f"è¯·æ±‚ URL: {url}")
        response = requests.get(url, timeout=5)
        print(f"çŠ¶æ€ç : {response.status_code}")

        if response.status_code == 200:
            data = response.json()
            print(f"\nâœ… Token ç”ŸæˆæˆåŠŸ!")
            print(f"\nç”¨æˆ·ä¿¡æ¯:")
            print(f"  - User ID: {data.get('user_id')}")
            print(f"  - Username: {data.get('username')}")
            print(f"  - Email: {data.get('email')}")
            print(f"\nToken ä¿¡æ¯:")
            print(f"  - Token Type: {data.get('token_type')}")
            print(f"  - Expires In: {data.get('expires_in')}ç§’ ({data.get('expires_in')//60}åˆ†é’Ÿ)")
            print(f"\nğŸ”‘ Access Token (å‰100å­—ç¬¦):")
            print(f"  {data.get('access_token', '')[:100]}...")
            print(f"\nğŸ”„ Refresh Token (å‰100å­—ç¬¦):")
            print(f"  {data.get('refresh_token', '')[:100]}...")

            # ä¿å­˜å®Œæ•´Tokenåˆ°æ–‡ä»¶
            with open('/tmp/auth_test_token.txt', 'w') as f:
                f.write(data.get('access_token', ''))
            print(f"\nğŸ’¾ å®Œæ•´ Access Token å·²ä¿å­˜åˆ°: /tmp/auth_test_token.txt")

            return data.get('access_token')
        else:
            print(f"âŒ Token ç”Ÿæˆå¤±è´¥")
            print(f"å“åº”: {response.text}")
            return None
    except Exception as e:
        print(f"âŒ é”™è¯¯: {e}")
        return None

def main():
    print("\n")
    print("ğŸš€ auth-service æµ‹è¯•å¼€å§‹")
    print("=" * 60)

    # æµ‹è¯•å¥åº·æ£€æŸ¥
    if not test_health():
        print("\nâŒ å¥åº·æ£€æŸ¥å¤±è´¥ï¼Œè¯·æ£€æŸ¥æœåŠ¡æ˜¯å¦æ­£åœ¨è¿è¡Œ")
        sys.exit(1)

    # ç”Ÿæˆæµ‹è¯• Token
    access_token = generate_test_token()
    if not access_token:
        print("\nâŒ Token ç”Ÿæˆå¤±è´¥")
        sys.exit(1)

    print("\n" + "=" * 60)
    print("âœ… æ‰€æœ‰ HTTP æµ‹è¯•é€šè¿‡!")
    print("=" * 60)
    print("\nä¸‹ä¸€æ­¥: ä½¿ç”¨ grpcurl æµ‹è¯• gRPC æœåŠ¡")
    print(f"\nè¿è¡Œä»¥ä¸‹å‘½ä»¤æµ‹è¯• ValidateToken:")
    print(f"```bash")
    print(f'grpcurl -plaintext -d \'{{"access_token": "$(cat /tmp/auth_test_token.txt)"}}\' \\')
    print(f'  localhost:9013 hkd.auth.v1.AuthService/ValidateToken')
    print(f"```\n")

if __name__ == "__main__":
    main()
